leptos_macro/tests/compiler_assumptions/05_error_absorbed_by_ufcs.stderr
error[E0599]: the method `pass` exists for type `bool`, but its trait bounds were not satisfied
  --> tests/compiler_assumptions/05_error_absorbed_by_ufcs.rs:48:23
   |
48 |     let checked = val.pass();
   |                       ^^^^ method cannot be called on `bool` due to unsatisfied trait bounds
   |
note: the following trait bounds were not satisfied:
      `&bool: Fn<()>`
      `&mut bool: Fn<()>`
      `<&bool as FnOnce<()>>::Output = bool`
      `<&mut bool as FnOnce<()>>::Output = bool`
      `<bool as FnOnce<()>>::Output = bool`
      `bool: Fn<()>`
  --> tests/compiler_assumptions/05_error_absorbed_by_ufcs.rs:19:9
   |
19 | impl<T: Fn() -> bool> Check for T {
   |         ^^^^^^^^^^^^  -----     -
   |         |       |
   |         |       unsatisfied trait bound introduced here
   |         unsatisfied trait bound introduced here
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Check` defines an item `pass`, perhaps you need to implement it
  --> tests/compiler_assumptions/05_error_absorbed_by_ufcs.rs:15:1
   |
15 | trait Check {
   | ^^^^^^^^^^^
